--- a/Configuration/config.properties
+++ b/Configuration/config.properties
@@ -1,5 +1,5 @@
 baseURL = https://admin-demo.nopcommerce.com
 username = admin@yourstore.com
-password = admi
+password = admin
 chromepath = ./Drivers\\chromedriver.exe
 firefoxpath = ./Drivers\\geckodriver.exe
